[build-system]
requires = ["setuptools>=46.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 99
target-version = ["py36", "py37", "py38"]

[tool.isort]
profile = "black"
line_length = 99
force_sort_within_sections = true
skip_gitignore = true

[tool.coverage.run]
branch = true
omit = [".tox/*", "setup.py"]
