[build-system]
requires = ["setuptools>=62.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.black]
line-length = 99
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 99
force_sort_within_sections = true
skip_gitignore = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
omit = [".tox/*", "setup.py"]
